// Postgres schema (production backend — Supabase hosted Postgres). Kept in
// sync with schema.sqlite.js — same tables, same columns, same constraints;
// only the dialect differs. Id columns use GENERATED BY DEFAULT AS IDENTITY
// (int4, so node-postgres returns JS numbers, matching the SQLite API's
// integer ids), and timestamp defaults use CURRENT_TIMESTAMP (identical to
// the SQLite datetime('now') default).
//
// Exported as an array of single statements (node-postgres runs one
// statement per query call).

export const postgresSchema = [
  // ---- core protocol ----

  `CREATE TABLE IF NOT EXISTS protocols (
    id                    TEXT PRIMARY KEY,
    title                 TEXT NOT NULL,
    pi                    TEXT NOT NULL,
    species               TEXT,
    status                TEXT NOT NULL DEFAULT 'Draft',
    animals               INTEGER,
    pain_category         TEXT,
    submitted             TEXT,
    expires               TEXT,
    purpose_summary       TEXT,
    harm_benefit_analysis TEXT,
    scientific_summary    TEXT,
    created_at            TEXT DEFAULT (CURRENT_TIMESTAMP),
    updated_at            TEXT DEFAULT (CURRENT_TIMESTAMP)
  )`,

  `CREATE TABLE IF NOT EXISTS related_items (
    id          INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    protocol_id TEXT NOT NULL REFERENCES protocols(id) ON DELETE CASCADE,
    list_name   TEXT NOT NULL,
    label       TEXT NOT NULL
  )`,

  `CREATE INDEX IF NOT EXISTS idx_related_items_protocol ON related_items(protocol_id)`,

  // ---- admin: lookup lists ----

  `CREATE TABLE IF NOT EXISTS species (
    id   INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    name TEXT NOT NULL UNIQUE
  )`,

  `CREATE TABLE IF NOT EXISTS roles (
    id            INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    name          TEXT NOT NULL UNIQUE,
    is_committee  INTEGER NOT NULL DEFAULT 0
  )`,

  // ---- personnel ----

  `CREATE TABLE IF NOT EXISTS personnel (
    id         INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    name       TEXT NOT NULL,
    email      TEXT,
    role_id    INTEGER NOT NULL REFERENCES roles(id) ON DELETE RESTRICT,
    created_at TEXT DEFAULT (CURRENT_TIMESTAMP)
  )`,

  `CREATE TABLE IF NOT EXISTS personnel_training (
    id             INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    personnel_id   INTEGER NOT NULL REFERENCES personnel(id) ON DELETE CASCADE,
    course         TEXT NOT NULL,
    completed_date TEXT NOT NULL,
    expires_date   TEXT,
    created_at     TEXT DEFAULT (CURRENT_TIMESTAMP)
  )`,

  `CREATE TABLE IF NOT EXISTS personnel_ohsp (
    personnel_id  INTEGER PRIMARY KEY REFERENCES personnel(id) ON DELETE CASCADE,
    status        TEXT NOT NULL DEFAULT 'Pending',
    reviewed_date TEXT,
    notes         TEXT,
    updated_at    TEXT DEFAULT (CURRENT_TIMESTAMP)
  )`,

  // ---- committee: FCR votes ----

  `CREATE TABLE IF NOT EXISTS protocol_votes (
    id           INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    protocol_id  TEXT NOT NULL REFERENCES protocols(id) ON DELETE CASCADE,
    personnel_id INTEGER NOT NULL REFERENCES personnel(id) ON DELETE CASCADE,
    vote         TEXT NOT NULL,
    comment      TEXT,
    voted_at     TEXT DEFAULT (CURRENT_TIMESTAMP),
    UNIQUE(protocol_id, personnel_id)
  )`,

  `CREATE TABLE IF NOT EXISTS protocol_review_assignments (
    id           INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    protocol_id  TEXT NOT NULL REFERENCES protocols(id) ON DELETE CASCADE,
    personnel_id INTEGER NOT NULL REFERENCES personnel(id) ON DELETE CASCADE,
    role         TEXT NOT NULL,
    assigned_at  TEXT DEFAULT (CURRENT_TIMESTAMP),
    UNIQUE(protocol_id, personnel_id)
  )`,

  `CREATE TABLE IF NOT EXISTS protocol_review_comments (
    id           INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    protocol_id  TEXT NOT NULL REFERENCES protocols(id) ON DELETE CASCADE,
    personnel_id INTEGER NOT NULL REFERENCES personnel(id) ON DELETE CASCADE,
    section      TEXT NOT NULL,
    comment      TEXT NOT NULL,
    created_at   TEXT DEFAULT (CURRENT_TIMESTAMP)
  )`,

  // ---- protocol application content ----

  `CREATE TABLE IF NOT EXISTS protocol_procedures (
    id            INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    protocol_id   TEXT NOT NULL REFERENCES protocols(id) ON DELETE CASCADE,
    procedure_key TEXT NOT NULL,
    checked       INTEGER NOT NULL DEFAULT 0,
    description   TEXT,
    UNIQUE(protocol_id, procedure_key)
  )`,

  `CREATE TABLE IF NOT EXISTS protocol_drugs (
    id             INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    protocol_id    TEXT NOT NULL REFERENCES protocols(id) ON DELETE CASCADE,
    reason_for_use TEXT,
    drug           TEXT NOT NULL,
    dose           TEXT,
    route          TEXT,
    duration       TEXT
  )`,

  `CREATE TABLE IF NOT EXISTS protocol_animal_use (
    id            INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    protocol_id   TEXT NOT NULL REFERENCES protocols(id) ON DELETE CASCADE,
    species_strain TEXT NOT NULL,
    sex           TEXT,
    approx_age    TEXT,
    max_count     INTEGER
  )`,

  `CREATE TABLE IF NOT EXISTS protocol_experiments (
    id            INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    protocol_id   TEXT NOT NULL REFERENCES protocols(id) ON DELETE CASCADE,
    name          TEXT NOT NULL,
    description   TEXT,
    multiple_surgical_events INTEGER NOT NULL DEFAULT 0,
    humane_endpoints TEXT,
    persistent_clinical_signs_justification TEXT,
    monitoring_plan TEXT,
    husbandry_exceptions TEXT
  )`,

  `CREATE TABLE IF NOT EXISTS protocol_alternatives (
    protocol_id      TEXT PRIMARY KEY REFERENCES protocols(id) ON DELETE CASCADE,
    replacement_text TEXT,
    refinement_text  TEXT,
    reduction_text   TEXT,
    lit_databases    TEXT,
    lit_years_from   TEXT,
    lit_years_to     TEXT,
    lit_search_date  TEXT,
    lit_keywords     TEXT,
    lit_summary      TEXT,
    colleague_name   TEXT,
    colleague_date   TEXT,
    colleague_notes  TEXT,
    av_consult_date  TEXT
  )`,

  `CREATE TABLE IF NOT EXISTS protocol_rrr_entries (
    id          INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    protocol_id TEXT NOT NULL REFERENCES protocols(id) ON DELETE CASCADE,
    rrr_type    TEXT NOT NULL CHECK (rrr_type IN ('replacement', 'refinement', 'reduction')),
    method      TEXT NOT NULL,
    explanation TEXT
  )`,

  `CREATE TABLE IF NOT EXISTS animal_usage_transactions (
    id               INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    protocol_id      TEXT NOT NULL REFERENCES protocols(id) ON DELETE CASCADE,
    transaction_date TEXT NOT NULL,
    species_strain   TEXT NOT NULL,
    pain_level       TEXT,
    quantity         INTEGER NOT NULL CHECK (quantity > 0),
    type             TEXT NOT NULL DEFAULT 'use',
    procedure_key    TEXT,
    notes            TEXT,
    created_at       TEXT DEFAULT (CURRENT_TIMESTAMP)
  )`,

  // ---- Domain F: facilities & inspections ----

  `CREATE TABLE IF NOT EXISTS facilities (
    id         INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    name       TEXT NOT NULL,
    type       TEXT NOT NULL,
    species    TEXT,
    created_at TEXT DEFAULT (CURRENT_TIMESTAMP)
  )`,

  `CREATE TABLE IF NOT EXISTS inspections (
    id              INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    facility_id     INTEGER NOT NULL REFERENCES facilities(id) ON DELETE CASCADE,
    inspection_date TEXT NOT NULL,
    report          TEXT,
    result          TEXT NOT NULL DEFAULT 'Pending',
    created_at      TEXT DEFAULT (CURRENT_TIMESTAMP)
  )`,

  `CREATE TABLE IF NOT EXISTS inspection_deficiencies (
    id                   INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    inspection_id        INTEGER NOT NULL REFERENCES inspections(id) ON DELETE CASCADE,
    severity             TEXT NOT NULL,
    description          TEXT NOT NULL,
    remediation_deadline TEXT,
    remediated_at        TEXT
  )`,

  // ---- Domain E: PAM & incidents ----

  `CREATE TABLE IF NOT EXISTS incidents (
    id                INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    protocol_id       TEXT REFERENCES protocols(id) ON DELETE CASCADE,
    type              TEXT NOT NULL,
    description       TEXT NOT NULL,
    severity          TEXT NOT NULL DEFAULT 'Minor',
    status            TEXT NOT NULL DEFAULT 'Open',
    corrective_action TEXT,
    closed_at         TEXT,
    reported_by       INTEGER REFERENCES personnel(id) ON DELETE SET NULL,
    assigned_to       INTEGER REFERENCES personnel(id) ON DELETE SET NULL,
    created_at        TEXT DEFAULT (CURRENT_TIMESTAMP)
  )`,

  `CREATE TABLE IF NOT EXISTS pam_audits (
    id          INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    protocol_id TEXT NOT NULL REFERENCES protocols(id) ON DELETE CASCADE,
    audit_date  TEXT NOT NULL,
    auditor_id  INTEGER REFERENCES personnel(id) ON DELETE SET NULL,
    site_visits TEXT,
    findings    TEXT,
    report      TEXT,
    created_at  TEXT DEFAULT (CURRENT_TIMESTAMP)
  )`,

  // ---- Domain B: amendments & renewals ----

  `CREATE TABLE IF NOT EXISTS amendments (
    id          INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    protocol_id TEXT NOT NULL REFERENCES protocols(id) ON DELETE CASCADE,
    reason      TEXT NOT NULL,
    status      TEXT NOT NULL DEFAULT 'Pending',
    created_at  TEXT DEFAULT (CURRENT_TIMESTAMP)
  )`,

  `CREATE TABLE IF NOT EXISTS amendment_changes (
    id             INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    amendment_id   INTEGER NOT NULL REFERENCES amendments(id) ON DELETE CASCADE,
    section        TEXT NOT NULL,
    field          TEXT NOT NULL,
    previous_value TEXT,
    new_value      TEXT,
    created_at     TEXT DEFAULT (CURRENT_TIMESTAMP)
  )`,

  `CREATE TABLE IF NOT EXISTS protocol_versions (
    id              INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    protocol_id     TEXT NOT NULL REFERENCES protocols(id) ON DELETE CASCADE,
    version_number  TEXT NOT NULL,
    source          TEXT NOT NULL,
    approved_date   TEXT,
    expiration_date TEXT,
    version_date    TEXT DEFAULT (CURRENT_TIMESTAMP),
    UNIQUE(protocol_id, version_number)
  )`,

  `CREATE TABLE IF NOT EXISTS renewals (
    id             INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    protocol_id    TEXT NOT NULL REFERENCES protocols(id) ON DELETE CASCADE,
    type           TEXT NOT NULL,
    status         TEXT NOT NULL DEFAULT 'Pending',
    submitted_date TEXT DEFAULT (CURRENT_TIMESTAMP),
    decision_date  TEXT,
    approved_until TEXT,
    created_at     TEXT DEFAULT (CURRENT_TIMESTAMP)
  )`,

  // ---- migration guards for databases created before these columns existed ----
  // (idempotent; ADD COLUMN IF NOT EXISTS makes them a no-op on fresh schemas)

  `ALTER TABLE protocols ADD COLUMN IF NOT EXISTS purpose_summary TEXT`,
  `ALTER TABLE protocols ADD COLUMN IF NOT EXISTS harm_benefit_analysis TEXT`,
  `ALTER TABLE protocols ADD COLUMN IF NOT EXISTS scientific_summary TEXT`,
  `ALTER TABLE protocols ADD COLUMN IF NOT EXISTS pi_proxy TEXT`,
  `ALTER TABLE protocols ADD COLUMN IF NOT EXISTS ptm_member TEXT`,
  `ALTER TABLE protocols ADD COLUMN IF NOT EXISTS protocol_type TEXT`,
  `ALTER TABLE protocols ADD COLUMN IF NOT EXISTS anesthesia_required INTEGER`,
  `ALTER TABLE protocols ADD COLUMN IF NOT EXISTS housing TEXT`,
  `ALTER TABLE protocols ADD COLUMN IF NOT EXISTS disposal TEXT`,
  `ALTER TABLE protocols ADD COLUMN IF NOT EXISTS npg TEXT`,
  `ALTER TABLE protocols ADD COLUMN IF NOT EXISTS research_steps TEXT`,
  `ALTER TABLE protocols ADD COLUMN IF NOT EXISTS review_method TEXT`,
  `ALTER TABLE protocol_procedures ADD COLUMN IF NOT EXISTS surgical_description TEXT`,
  `ALTER TABLE protocol_procedures ADD COLUMN IF NOT EXISTS aseptic_preparation TEXT`,
  `ALTER TABLE protocol_procedures ADD COLUMN IF NOT EXISTS analgesia_level TEXT`,
  `ALTER TABLE protocol_procedures ADD COLUMN IF NOT EXISTS postop_care TEXT`,
];
