erDiagram
    protocols ||--o{ related_items : "has"
    protocols ||--o{ protocol_procedures : "has"
    protocols ||--o{ protocol_drugs : "has"
    protocols ||--o{ protocol_animal_use : "has"
    protocols ||--o{ protocol_experiments : "has"
    protocols ||--o| protocol_alternatives : "has (1:1)"
    protocols ||--o{ protocol_rrr_entries : "has"
    protocols ||--o{ animal_usage_transactions : "ledger of"
    protocols ||--o{ protocol_votes : "receives votes"
    protocols ||--o{ protocol_review_assignments : "has"
    protocols ||--o{ protocol_review_comments : "receives comments"
    protocols ||--o{ amendments : "versioned documents"
    protocols ||--o{ protocol_versions : "version lineage"
    protocols ||--o{ renewals : "continuing / de novo review"
    protocols ||--o{ protocol_transfers : "ownership requests"
    protocols ||--o{ pam_audits : "PAM site visits"
    protocols ||--o{ incidents : "reports adverse events"
    facilities ||--o{ inspections : "inspected every six months"
    inspections ||--o{ inspection_deficiencies : "found in"
    amendments ||--o{ amendment_changes : "field-level changes"
    roles ||--o{ personnel : "occupies"
    personnel ||--o{ personnel_training : "has"
    personnel ||--o| personnel_ohsp : "has (0..1)"
    personnel ||--o{ protocol_votes : "casts"
    personnel ||--o{ protocol_review_assignments : "is assigned"
    personnel ||--o{ protocol_review_comments : "writes"
    personnel ||--o{ protocol_transfers : "requested as recipient"
    personnel ||--o{ incidents : "reported / assigned"
    personnel ||--o{ pam_audits : "conducts audits"
    audit_log {
        int id PK
        string action
        string entity_type
        string entity_id
        string actor
        string actor_key
        string details
        string provenance
        string created_at
    }

    protocols {
        string id PK
        string title
        string pi
        string status
        string pain_category
        string review_method
    }
    related_items {
        int id PK
        string protocol_id FK
        string list_name
        string label
    }
    species {
        int id PK
        string name
    }
    roles {
        int id PK
        string name
        bool is_committee
    }
    personnel {
        int id PK
        string name
        string email
        int role_id FK
    }
    personnel_training {
        int id PK
        int personnel_id FK
        string course
        string expires_date
    }
    personnel_ohsp {
        int personnel_id PK, FK
        string status
    }
    protocol_votes {
        int id PK
        string protocol_id FK
        int personnel_id FK
        string vote
        string comment
    }
    protocol_review_assignments {
        int id PK
        string protocol_id FK
        int personnel_id FK
        string role
    }
    protocol_review_comments {
        int id PK
        string protocol_id FK
        int personnel_id FK
        string section
    }
    protocol_procedures {
        int id PK
        string protocol_id FK
        string procedure_key
        bool checked
    }
    protocol_drugs {
        int id PK
        string protocol_id FK
        string drug
        string dose
    }
    protocol_animal_use {
        int id PK
        string protocol_id FK
        string species_strain
        int max_count
    }
    protocol_experiments {
        int id PK
        string protocol_id FK
        string name
    }
    protocol_alternatives {
        string protocol_id PK, FK
        string lit_databases
        string av_consult_date
    }
    protocol_rrr_entries {
        int id PK
        string protocol_id FK
        string rrr_type
        string method
    }
    animal_usage_transactions {
        int id PK
        string protocol_id FK
        string species_strain
        int quantity
        string type
    }
    amendments {
        int id PK
        string protocol_id FK
        string reason
        string status
    }
    amendment_changes {
        int id PK
        int amendment_id FK
        string section
        string field
        string previous_value
        string new_value
    }
    protocol_versions {
        int id PK
        string protocol_id FK
        string version_number
        string source
        string approved_date
        string expiration_date
    }
    renewals {
        int id PK
        string protocol_id FK
        string type
        string status
        string approved_until
    }
    protocol_transfers {
        int id PK
        string protocol_id FK
        string from_pi
        int to_personnel_id FK
        string reason
        string status
        string decision_date
    }
    facilities {
        int id PK
        string name
        string type
        string species
    }
    inspections {
        int id PK
        int facility_id FK
        string inspection_date
        string result
    }
    inspection_deficiencies {
        int id PK
        int inspection_id FK
        string severity
        string description
    }
    incidents {
        int id PK
        string protocol_id FK
        string type
        string severity
        string status
    }
    pam_audits {
        int id PK
        string protocol_id FK
        int auditor_id FK
        string audit_date
    }
